k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ouistity
  labels:
    namespace: ouistity
    goldilocks.fairwinds.com/enabled: "true"
