k8s/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ouistity
spec:
  selector:
    matchLabels:
      app: ouistity
  template:
    metadata:
      labels:
        app: ouistity
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: ouistity
          image: shokohsc/ouistity
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
